--- a/emall-manager/src/main/resources/templates/login.html
+++ b/emall-manager/src/main/resources/templates/login.html
@@ -107,6 +107,7 @@
             function(result){
                 if (result.status == 1){
                     alert(result.data);
+                    window.location.href="";
                 } else {
                     alert(result.msg);
                 }
